# net-auto.nl

./: .gitignore  404.html  README.md  Taskfile.yml  create_event.py  events.yaml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: gh_deploy.yml  test.yml
about_us/about_us/: index.html
blog/: index.html
contact/: index.html
contact/mailsent/: index.html
events/: index.html
events/dates/20260205_Adyen_Netpicker/: index.html
events/dates/20260205_adyen_netpicker/: index.html
events/dates/20260513_APNT/: index.html
events/dates/20260909_One_Zero_IT/: index.html
events/previous_events/: index.html
search/: search_index.json
stylesheets/: extra.css
website/: main.py  mkdocs.yml  test_main.py  test_site.py
website/docs/: CNAME  index.md
website/docs/about_us/: about_us.md
website/docs/contact/: index.md  mailsent.md
website/docs/events/: index.md  previous_events.md
website/docs/events/dates/: 20260205_Adyen_Netpicker.md  20260205_adyen_netpicker.md  20260412_Nokia.md  20260513_APNT.md  20260520_apnt.md  20260909_OneZeroIT.md  20260909_One_Zero_IT.md
website/docs/stylesheets/: extra.css
