[project]
name = "net-auto.nl"
version = "0.1.0"
description = "net-auto.nl NL Network Automation Meetup website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs-material[imaging]==9.6.20",
    "mkdocs-rss-plugin>=1.17.1",
    "mkdocs-macros-plugin>=1.2.0",
    "pytest>=9.0.1",
]
